--- a/pom.xml
+++ b/pom.xml
@@ -55,8 +55,10 @@
         <docs.classes.dir>${project.build.directory}/build-docs-classes</docs.classes.dir>
 
         <maven-center-repository.host>central.sonatype.com</maven-center-repository.host>
-        <ossrh-staging-api.base-uri>https://ossrh-staging-api.${maven-center-repository.host}</ossrh-staging-api.base-uri>
-        <ossrh-snapshots-repository.uri>https://${maven-center-repository.host}/repository/maven-snapshots/</ossrh-snapshots-repository.uri>
+        <ossrh-staging-api.base-uri>https://ossrh-staging-api.${maven-center-repository.host}
+        </ossrh-staging-api.base-uri>
+        <ossrh-snapshots-repository.uri>https://${maven-center-repository.host}/repository/maven-snapshots/
+        </ossrh-snapshots-repository.uri>
         <ossrh-repository.uri>${ossrh-staging-api.base-uri}/service/local/staging/deploy/maven2/</ossrh-repository.uri>
 
         <!-- Sonar -->
@@ -110,8 +112,8 @@
         <maven-checkstyle-plugin.includeTestSourceDirectory>true</maven-checkstyle-plugin.includeTestSourceDirectory>
 
         <!-- Arguments Line -->
-        <jvm.argLine />
-        <jacoco.argLine />
+        <jvm.argLine/>
+        <jacoco.argLine/>
 
     </properties>
 
@@ -224,6 +226,7 @@
                     <extensions>true</extensions>
                     <configuration>
                         <publishingServerId>central</publishingServerId>
+                        <autoPublish>true</autoPublish>
                     </configuration>
                 </plugin>
 
@@ -568,6 +571,38 @@
         </profile>
 
         <profile>
+            <id>publish</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-release-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-enforcer-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>pl.project13.maven</groupId>
+                        <artifactId>git-commit-id-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.central</groupId>
+                        <artifactId>central-publishing-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
             <id>ci</id>
             <build>
                 <plugins>
@@ -754,5 +789,5 @@
             <url>${ossrh-repository.uri}</url>
         </repository>
     </distributionManagement>
-    
+
 </project>
