--- a/pom.xml
+++ b/pom.xml
@@ -225,7 +225,7 @@
                     <version>${central-publishing-maven-plugin.version}</version>
                     <extensions>true</extensions>
                     <configuration>
-                        <publishingServerId>central</publishingServerId>
+                        <publishingServerId>ossrh</publishingServerId>
                         <autoPublish>true</autoPublish>
                     </configuration>
                 </plugin>
