--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -10,9 +10,9 @@ name: Maven Build
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main" , 'dev' ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main" , 'dev' ]
 
 jobs:
   build:
