--- a/pom.xml
+++ b/pom.xml
@@ -683,7 +683,7 @@
         <profile>
             <id>puppycrawl-legacy</id>
             <activation>
-                <jdk>[1.8,11]</jdk>
+                <jdk>[1.8,11)</jdk>
             </activation>
             <properties>
                 <puppycrawl-tools-checkstyle.version>8.18</puppycrawl-tools-checkstyle.version>
