Update Javadoc plugin config to use <doclint>none</doclint>
Replaces the deprecated <additionalOptions>-Xdoclint:none</additionalOptions> with <doclint>none</doclint> in the maven-javadoc-plugin configuration for improved compatibility and clarity.

--- a/pom.xml
+++ b/pom.xml
@@ -696,7 +696,7 @@
                             <artifactId>maven-javadoc-plugin</artifactId>
                             <inherited>true</inherited>
                             <configuration>
-                                <additionalOptions>-Xdoclint:none</additionalOptions>
+                                <doclint>none</doclint>
                             </configuration>
                         </plugin>
                     </plugins>
